--- a/src/templates/dialogs/roll-attack.html
+++ b/src/templates/dialogs/roll-attack.html
@@ -22,10 +22,10 @@
     </select>
   </div>
   {{else}}
-  <div class="flex flex-col">
+  {{!-- <div class="flex flex-col">
     <label for="skilled">{{localize 'swnr.npc.skilled-with-weapon'}}:</label>
-    <input type="checkbox" name="skilled" id="skilled" checked />
-  </div>
+    <input type="checkbox" name="skilled" id="skilled" />
+  </div> --}}
   {{/if}}
   <div class="flex flex-col">
     <label for="modifier">{{localize 'swnr.chat.modifier'}}: </label>
