Simple Cal date integration for travel and payment/maint

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -556,6 +556,9 @@
               </div>
 
             </div>
+            <div class="p-2">
+              Note: If simple-calendar module is installed, travel and schedule will integrate automatically.
+            </div>
           </div> <!-- end cost-->
           <!-- Cargo tab -->
           <div class="tab shipcost min-h-full" data-group="primary" data-tab="cargo">
