wip on manual log entry

--- a/src/templates/actors/faction-sheet.html
+++ b/src/templates/actors/faction-sheet.html
@@ -238,6 +238,9 @@
           <a class="faction-log-delete-all"><i class="fas fa-trash  fa-2x faction-log-delete-all"></i>
             {{localize 'swnr.sheet.faction.remove-log-all'}}</a>
             <hr>
+          <a class="faction-log-add"><i class="fas fa-plus  fa-2x faction-log-add"></i>
+            {{localize 'swnr.sheet.faction.add-log'}}</a>
+            <hr>
           </div>
           <div class="p-2">
             
