--- a/src/templates/dialogs/roll-spike.html
+++ b/src/templates/dialogs/roll-spike.html
@@ -75,6 +75,7 @@
     </div>
   </div>
   <div>
+    Difficulty Modifiers:
       <ul>
          <li>+6 Uncharted</li> 
          <li>+2 Rutter more than 5 years </li>
