--- a/src/templates/items/weapon-sheet.html
+++ b/src/templates/items/weapon-sheet.html
@@ -220,7 +220,7 @@
       </label>
     </div>
   </div>
-      <div class="flex gap-1 flexrow">
+  <div class="grid grid-cols-1">
       {{#if data.data.remember}}
         {{#if data.data.remember.use}}
           <label class="flex items-center gap-1">
@@ -234,5 +234,5 @@
           </label>
         {{/if}}
       {{/if}}
-    </div>
+  </div>
 </form>
