--- a/src/templates/actors/fragments/item-table.html
+++ b/src/templates/actors/fragments/item-table.html
@@ -19,7 +19,7 @@
     {{#each itemList as |item id|}}
     <li class="item-entry">
       <div class="item flexrow py-3.0" data-item-id="{{item.id}}">
-        <div class="item-image" style="background-image: url({{item.img}})"><a></a></div>
+        <div class="item-image item-click item-rollable" style="background-image: url({{item.img}})"><a></a></div>
         <div class="item-name item-click item-rollable flexrow pr-2.0">
           <a>{{item.name}}</a>
         </div>
@@ -40,6 +40,8 @@
           </select>
         </div>
         <div class="item-controls text-right flex-shrink">
+          <a class="item-control item-show text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.show-item'}}'>
+            <i class="fas fa-comment"></i></a>
           <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
             <i class="fas fa-edit"></i></a>
           <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors" title='{{localize 'swnr.sheet.delete-item'}}'>
