new property on skill adds to shock

--- a/src/templates/items/weapon-sheet.html
+++ b/src/templates/items/weapon-sheet.html
@@ -218,6 +218,15 @@
       />
         <div>{{localize 'swnr.weapon.skillAddDamage'}}</div>
       </label>
+      
+      <label class="flex items-center gap-1">
+        <input
+          type="checkbox"
+          name="data.skillBoostsShock"
+          {{checked data.data.skillBoostsShock}}
+      />
+        <div>{{localize 'swnr.weapon.skillAddShockDamage'}}</div>
+      </label>
     </div>
   </div>
   <div class="grid grid-cols-1">
