--- a/src/templates/dialogs/roll-save.html
+++ b/src/templates/dialogs/roll-save.html
@@ -9,5 +9,6 @@
       value="0"
       class="w-8 px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
     />
+    {{localize 'swnr.chat.savemoddesc'}}
   </div>
 </form>
