custom tag and helper to abbreviate asset types

--- a/src/templates/actors/faction-sheet.html
+++ b/src/templates/actors/faction-sheet.html
@@ -232,6 +232,8 @@
           </div>
           <a class="faction-tag-add"><i class="fas fa-tags  fa-2x faction-tag-add"></i>
             {{localize 'swnr.sheet.faction.add-tag'}}</a>
+          <a class="faction-tag-add-custom"><i class="fas fa-tags  fa-2x faction-tag-add"></i>
+            {{localize 'swnr.sheet.faction.add-tag-custom'}}</a>
         </div>
         <div class="tab assets min-h-full" data-group="primary" data-tab="log">
           <div class="p-2">
