--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Gayathri";
+  src: url("assets/fonts/Gayathri-Regular.ttf");
+}
+body {
+  font-family: "Gayathri";
+}
+
 .swnr .window-content {
   /* &,
   *:not(.far, .fa, .fas, option) {
