--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -4,7 +4,7 @@
   actor=actor
   }}
   <div class="flex gap-2">
-    <div class="flex flex-col flex-shrink flex-wrap gap-1">
+    <div class="flex flex-col flex-shrink flex-wrap">
         {{>
         "systems/swnr/templates/actors/fragments/char/sidebar.html"
         actor=actor
